# MetasploitSight

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
metasploitsight/: conf_sample.py  config.py  main.py  monitoring.py
